# orthomagnet

./: .gitignore  Cargo.toml  LICENSE  readme.md  rename_crate.sh
.github/workflows/: release.yml
export_html/: index.html
src/: board.rs  counter.rs  lib.rs  main.rs  menu.rs  remote_player.rs
src/scenes/: game.rs  loading.rs  menu.rs  server_waiting.rs
src/ui/: button_trait.rs  complex_button.rs  counter.rs
